@@ -1,4 +1,7 @@
 <h2>Gestion des droits</h2>
-<?php
-
-?>
+<p>
+    Cette page servira uniquement à faciliter l'ajout de droits directement
+    après la création d'un nouvel utilisateur.<br />
+    Pour éditer les droits d'un utilisateur existant, veuillez pour le moment
+    vous rendre dans la page d'édition d'un profil utilisateur.
+</p>
